--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npm-run-all --parallel dev:client dev:backend",
     "dev:client": "npm --prefix ./client run dev",
-    "dev:backend": "npm --prefix ./backend run dev:backend"
+    "dev:backend": "npm --prefix ./backend run dev:backend",
+    "setup": "npm i && npm --prefix ./client i && npm --prefix ./backend i"
   },
   "author": "",
   "license": "ISC",
